Despre Runcu Commit

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -830,7 +830,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tyGHHEZrq2 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3rem);
+    max-height: calc(98.5vh - 4rem);
   }
 }
 .cid-tyGHHEZrq2 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1282,5 +1282,707 @@ a {
   width: 100%;
 }
 .cid-tyGIAXpmt7 .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-tyI7PExudz {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-tyI7PExudz nav.navbar {
+  position: fixed;
+}
+.cid-tyI7PExudz .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tyI7PExudz .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-tyI7PExudz .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-tyI7PExudz .dropdown-item:hover,
+.cid-tyI7PExudz .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-tyI7PExudz .dropdown-item:hover span {
+  color: white;
+}
+.cid-tyI7PExudz .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-tyI7PExudz .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-tyI7PExudz .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-tyI7PExudz .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tyI7PExudz .nav-link {
+  position: relative;
+}
+.cid-tyI7PExudz .container {
+  display: flex;
+  margin: auto;
+  flex-wrap: nowrap;
+}
+@media (max-width: 991px) {
+  .cid-tyI7PExudz .container {
+    flex-wrap: wrap;
+  }
+}
+.cid-tyI7PExudz .container-fluid {
+  flex-wrap: nowrap;
+}
+@media (max-width: 991px) {
+  .cid-tyI7PExudz .container-fluid {
+    flex-wrap: wrap;
+  }
+}
+.cid-tyI7PExudz .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tyI7PExudz .dropdown-menu,
+.cid-tyI7PExudz .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-tyI7PExudz .nav-item:focus,
+.cid-tyI7PExudz .nav-link:focus {
+  outline: none;
+}
+.cid-tyI7PExudz .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tyI7PExudz .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tyI7PExudz .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tyI7PExudz .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tyI7PExudz .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tyI7PExudz .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tyI7PExudz .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+}
+.cid-tyI7PExudz .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tyI7PExudz .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tyI7PExudz .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tyI7PExudz .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tyI7PExudz .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tyI7PExudz .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tyI7PExudz .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tyI7PExudz .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4rem);
+  }
+}
+.cid-tyI7PExudz .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tyI7PExudz .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tyI7PExudz .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tyI7PExudz .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tyI7PExudz .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tyI7PExudz .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tyI7PExudz .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tyI7PExudz .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tyI7PExudz .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tyI7PExudz .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tyI7PExudz .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tyI7PExudz .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tyI7PExudz .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tyI7PExudz .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tyI7PExudz .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tyI7PExudz .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tyI7PExudz .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+@media (max-width: 991px) and (max-width: 767px) {
+  .cid-tyI7PExudz .navbar .navbar-brand {
+    width: calc(100% - 31px);
+  }
+}
+.cid-tyI7PExudz .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tyI7PExudz .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tyI7PExudz .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tyI7PExudz .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tyI7PExudz .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tyI7PExudz .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tyI7PExudz .dropdown-item.active,
+.cid-tyI7PExudz .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tyI7PExudz .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tyI7PExudz .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tyI7PExudz .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tyI7PExudz .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-tyI7PExudz .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tyI7PExudz .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tyI7PExudz ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-tyI7PExudz .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tyI7PExudz button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tyI7PExudz button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-tyI7PExudz button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tyI7PExudz button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tyI7PExudz button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tyI7PExudz button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tyI7PExudz nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tyI7PExudz nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tyI7PExudz nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tyI7PExudz nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tyI7PExudz .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-tyI7PExudz a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tyI7PExudz .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tyI7PExudz .navbar {
+    height: 70px;
+  }
+  .cid-tyI7PExudz .navbar.opened {
+    height: auto;
+  }
+  .cid-tyI7PExudz .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-tyI7PFmGvP {
+  display: flex;
+  background-image: url("../../../assets/images/runcuvl-2017-3-2000x1125.jpg");
+}
+.cid-tyI7PFmGvP .mbr-overlay {
+  background-color: #353535;
+  opacity: 0.6;
+}
+.cid-tyI7PFmGvP .content-wrap {
+  padding: 5rem 1rem;
+}
+@media (min-width: 768px) {
+  .cid-tyI7PFmGvP {
+    align-items: flex-end;
+  }
+  .cid-tyI7PFmGvP .row {
+    justify-content: flex-start;
+  }
+  .cid-tyI7PFmGvP .content-wrap {
+    width: 51%;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-tyI7PFmGvP .content-wrap {
+    min-width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tyI7PFmGvP {
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-tyI7PFmGvP .mbr-row {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+  .cid-tyI7PFmGvP .content-wrap {
+    width: 100%;
+  }
+}
+.cid-tyI7PG1BW8 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #254d00;
+}
+.cid-tyI7PG1BW8 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tyI7PG1BW8 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tyI7PG1BW8 .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-tyI7PG1BW8 .mbr-text,
+.cid-tyI7PG1BW8 .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-tyIb6DnOGg {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-tyIb6DnOGg img,
+.cid-tyIb6DnOGg .item-img {
+  width: 100%;
+}
+.cid-tyIb6DnOGg .item:focus,
+.cid-tyIb6DnOGg span:focus {
+  outline: none;
+}
+.cid-tyIb6DnOGg .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tyIb6DnOGg .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tyIb6DnOGg .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tyIb6DnOGg .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tyIb6DnOGg .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tyIb6DnOGg .mbr-section-title {
+  color: #232323;
+}
+.cid-tyIb6DnOGg .mbr-text,
+.cid-tyIb6DnOGg .mbr-section-btn {
+  text-align: left;
+}
+.cid-tyIb6DnOGg .item-title {
+  text-align: left;
+}
+.cid-tyIb6DnOGg .item-subtitle {
+  text-align: left;
+}
+.cid-tyIjMnYurT {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #254d00;
+}
+.cid-tyIjMnYurT .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tyIjMnYurT .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tyIjMnYurT .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-tyIjMnYurT .mbr-text,
+.cid-tyIjMnYurT .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-tyInrLwmnL {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-tyInrLwmnL img,
+.cid-tyInrLwmnL .item-img {
+  width: 100%;
+}
+.cid-tyInrLwmnL .item:focus,
+.cid-tyInrLwmnL span:focus {
+  outline: none;
+}
+.cid-tyInrLwmnL .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tyInrLwmnL .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tyInrLwmnL .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tyInrLwmnL .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tyInrLwmnL .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tyInrLwmnL .mbr-section-title {
+  color: #232323;
+}
+.cid-tyInrLwmnL .mbr-text,
+.cid-tyInrLwmnL .mbr-section-btn {
+  text-align: left;
+}
+.cid-tyInrLwmnL .item-title {
+  text-align: left;
+}
+.cid-tyInrLwmnL .item-subtitle {
+  text-align: left;
+}
+.cid-tyIpkQ0fLv {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #254d00;
+}
+.cid-tyIpkQ0fLv .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tyIpkQ0fLv .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tyIpkQ0fLv .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-tyIpkQ0fLv .mbr-text,
+.cid-tyIpkQ0fLv .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-tyI7PG935B {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #ffffff;
+}
+.cid-tyI7PG935B .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tyI7PG935B .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tyI7PG935B .google-map {
+  height: 30rem;
+  position: relative;
+}
+.cid-tyI7PG935B .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-tyI7PG935B .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tyI7PG935B .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tyI7PG935B .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-tyI7PGp6QT {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-tyI7PGp6QT .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-tyI7PGp6QT .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-tyI7PGp6QT .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-tyI7PGp6QT .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-tyI7PGp6QT .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-tyI7PGp6QT .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-tyI7PGp6QT .media-container-row .social-list {
+  width: auto;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-tyI7PGp6QT .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-tyI7PGp6QT .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-tyI7PGp6QT .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-tyI7PGp6QT .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-tyI7PGp6QT .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-tyI7PGp6QT .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-tyI7PGp6QT .media-container-row .row-copirayt p {
   width: 100%;
 }
